--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,9 +1,41 @@
-#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__ {
 
-  proxy_pass https://localhost:__PORT__;
-  proxy_read_timeout 30s;
+location / {
 
-  # Include SSOWAT user panel.
-  include conf.d/yunohost_panel.conf.inc;
+rewrite  ^/$  https://__DOMAIN__/loleaflet/dist/admin/admin.html permanent;
+    # static files
+    location ^~ /loleaflet {
+        proxy_pass http://localhost:__PORT__;
+        proxy_set_header Host $http_host;
+    }
+
+    # WOPI discovery URL
+    location ^~ /hosting/discovery {
+        proxy_pass http://localhost:__PORT__;
+        proxy_set_header Host $http_host;
+    }
+
+    # Main websocket
+    location ~ /lool/(.*)/ws$ {
+        proxy_pass http://localhost:__PORT__;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $http_host;
+        proxy_read_timeout 36000s;
+    }
+
+    # Admin Console websocket
+    location ^~ /lool/adminws {
+        proxy_pass http://localhost:__PORT__;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $http_host;
+        proxy_read_timeout 36000s;
+    }
+
+    # download, presentation and image upload
+    location ^~ /lool {
+        proxy_pass http://localhost:__PORT__;
+        proxy_set_header Host $http_host;
+    }
+ 
 }
