--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,19 +4,19 @@ location / {
 rewrite  ^/$  https://__DOMAIN__/loleaflet/dist/admin/admin.html permanent;
     # static files
     location ^~ /loleaflet {
-        proxy_pass http://localhost:__PORT__;
+        proxy_pass https://localhost:__PORT__;
         proxy_set_header Host $http_host;
     }
 
     # WOPI discovery URL
     location ^~ /hosting/discovery {
-        proxy_pass http://localhost:__PORT__;
+        proxy_pass https://localhost:__PORT__;
         proxy_set_header Host $http_host;
     }
 
     # Main websocket
     location ~ /lool/(.*)/ws$ {
-        proxy_pass http://localhost:__PORT__;
+        proxy_pass https://localhost:__PORT__;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $http_host;
@@ -25,7 +25,7 @@ rewrite  ^/$  https://__DOMAIN__/loleaflet/dist/admin/admin.html permanent;
 
     # Admin Console websocket
     location ^~ /lool/adminws {
-        proxy_pass http://localhost:__PORT__;
+        proxy_pass https://localhost:__PORT__;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $http_host;
@@ -34,7 +34,7 @@ rewrite  ^/$  https://__DOMAIN__/loleaflet/dist/admin/admin.html permanent;
 
     # download, presentation and image upload
     location ^~ /lool {
-        proxy_pass http://localhost:__PORT__;
+        proxy_pass https://localhost:__PORT__;
         proxy_set_header Host $http_host;
     }
  
